--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 320px;
+  min-width: 320px;
   padding: 10px;
   border: 1px solid #000;
   border-radius: 5px;
   margin-bottom: 10px;
+  gap: 24px;
 }
 
 .contactDetails {
@@ -19,4 +20,15 @@
   display: flex;
   gap: 10px;
   align-items: center;
+}
+
+.bothButtons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.buttons {
+  min-width: 100px;
 }
